# wasmbind-wasip2-example

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
src/: app.c  app.cpp  app.h  app_cpp.h  index.js  main.cpp
wit/: app.wit
